测试会不会有跨域问题

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./main.css" />
-    <script src="./main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
+    <script src="./js/jquery.js"></script>
+    <script src="./js/vue.js"></script>
 </head>
+
 <body>
-    
+    <div id="test">
+        {{test}}
+        <button @click="testfun">测试</button>
+    </div>
 </body>
+<script src="./js/main.js"></script>
 </html>
