--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./css/main.css" />
     <script src="./js/jquery.js"></script>
     <script src="./js/vue.js"></script>
+    <script src="./js/markdown.js"></script>
 </head>
 
 <body>
-    <div id="test">
-        {{test}}
-        <button @click="testfun">测试</button>
+    <div id="main">
+       
     </div>
 </body>
 <script src="./js/main.js"></script>
+
 </html>
