添加标题栏自定义

--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
 </head>
 <nav>
         <div id="nav_top">
-            <div id="logo">
+            <div id="logo" onclick="window.history.back()">
                 <h1>恶搞大王的博客</h1>
             </div>
         </div>
